init: set up config and check working

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,17 +6,14 @@
     "allowJs": true,
     "outDir": "dist",
     // STOTLES NOTE: Set to true if you want to enable strict TS checks
-    "strict": false,
+    "strict": true,
     // "noImplicitAny": true,                 /* Raise error on expressions and declarations with an implied 'any' type. */
     // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
     "baseUrl": "./",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": true
   },
-  "include": [
-    "src/**/*.ts",
-    "spec/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "spec/**/*.ts"]
 }
