--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "types": ["jest", "node"]
   },
   "include": ["src/**/*.ts", "spec/**/*.ts"]
 }
